Fix field values

--- a/source/pre-register-form_es.html
+++ b/source/pre-register-form_es.html
@@ -10,10 +10,10 @@ addjs: pre-register-form.js
     <h1>Pre-registro</h1>
   </div>
 
-    <script type="text/javascript">var submitted=false;</script>
-    <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='form-submitted.html';}"></iframe>
+    <!-- <script type="text/javascript">var submitted=false;</script>
+    <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='form-submitted.html';}"></iframe> -->
 
-  <!-- Custom Line --><form class="form form--google" action="https://docs.google.com/forms/d/e/1FAIpQLSdtQTqYhfhCbuMeF0lkWw_cKF9lVQXI5Vb8Elie12whlvzDlg/formResponse" method="POST" id="ss-form" target="hidden_iframe" autocomplete="on" onsubmit="submitted=true"><ol role="list" class="ss-question-list" style="padding-left: 0;">
+  <!-- Custom Line --><form class="form form--google" action="https://docs.google.com/forms/d/e/1FAIpQLSdtQTqYhfhCbuMeF0lkWw_cKF9lVQXI5Vb8Elie12whlvzDlg/formResponse" method="POST" id="ss-form" target="_self" autocomplete="on" onsubmit="submitted=true"><ol role="list" class="ss-question-list" style="padding-left: 0;">
 
 
 <!-- Custom Line --><section class="js-hidden">
@@ -114,25 +114,25 @@ addjs: pre-register-form.js
 
 
 <ul class="ss-choices" role="radiogroup" aria-label="Región  "><li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.466055162" value="Asia Oriental y Pacífico" id="group_466055162_1" role="radio" class="ss-q-radio" aria-label="Asia Oriental y Pacífico" required="" aria-required="true"></span>
+<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.466055162" value="East Asia &amp; Pacific" id="group_466055162_1" role="radio" class="ss-q-radio" aria-label="Asia Oriental y Pacífico" required="" aria-required="true"></span>
 <span class="ss-choice-label">Asia Oriental y Pacífico</span>
 </label></li> <li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.466055162" value="Europa y Asia Central" id="group_466055162_2" role="radio" class="ss-q-radio" aria-label="Europa y Asia Central" required="" aria-required="true"></span>
+<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.466055162" value="Europe &amp; Central Asia" id="group_466055162_2" role="radio" class="ss-q-radio" aria-label="Europa y Asia Central" required="" aria-required="true"></span>
 <span class="ss-choice-label">Europa y Asia Central</span>
 </label></li> <li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.466055162" value="América Latina y Caribe" id="group_466055162_3" role="radio" class="ss-q-radio" aria-label="América Latina y Caribe" required="" aria-required="true"></span>
+<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.466055162" value="Latin America &amp; Caribbean" id="group_466055162_3" role="radio" class="ss-q-radio" aria-label="América Latina y Caribe" required="" aria-required="true"></span>
 <span class="ss-choice-label">América Latina y Caribe</span>
 </label></li> <li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.466055162" value="Medio Oriente y África del Norte" id="group_466055162_4" role="radio" class="ss-q-radio" aria-label="Medio Oriente y África del Norte" required="" aria-required="true"></span>
+<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.466055162" value="Middle East &amp; North Africa" id="group_466055162_4" role="radio" class="ss-q-radio" aria-label="Medio Oriente y África del Norte" required="" aria-required="true"></span>
 <span class="ss-choice-label">Medio Oriente y África del Norte</span>
 </label></li> <li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.466055162" value="América del Norte" id="group_466055162_5" role="radio" class="ss-q-radio" aria-label="América del Norte" required="" aria-required="true"></span>
+<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.466055162" value="North America" id="group_466055162_5" role="radio" class="ss-q-radio" aria-label="América del Norte" required="" aria-required="true"></span>
 <span class="ss-choice-label">América del Norte</span>
 </label></li> <li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.466055162" value="Asia del Sur" id="group_466055162_6" role="radio" class="ss-q-radio" aria-label="Asia del Sur" required="" aria-required="true"></span>
+<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.466055162" value="South Asia" id="group_466055162_6" role="radio" class="ss-q-radio" aria-label="Asia del Sur" required="" aria-required="true"></span>
 <span class="ss-choice-label">Asia del Sur</span>
 </label></li> <li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.466055162" value="Africa Sub-Sahariana" id="group_466055162_7" role="radio" class="ss-q-radio" aria-label="Africa Sub-Sahariana" required="" aria-required="true"></span>
+<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.466055162" value="Sub-Saharan Africa" id="group_466055162_7" role="radio" class="ss-q-radio" aria-label="Africa Sub-Sahariana" required="" aria-required="true"></span>
 <span class="ss-choice-label">Africa Sub-Sahariana</span>
 </label></li></ul>
 <div class="error-message" id="237309065_errorMessage"></div>
@@ -145,16 +145,16 @@ addjs: pre-register-form.js
 
 
 <ul class="ss-choices" role="radiogroup" aria-label="Género  "><li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.958755899" value="Mujer" id="group_958755899_1" role="radio" class="ss-q-radio" aria-label="Mujer" required="" aria-required="true"></span>
+<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.958755899" value="Female" id="group_958755899_1" role="radio" class="ss-q-radio" aria-label="Mujer" required="" aria-required="true"></span>
 <span class="ss-choice-label">Mujer</span>
 </label></li> <li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.958755899" value="Hombre" id="group_958755899_2" role="radio" class="ss-q-radio" aria-label="Hombre" required="" aria-required="true"></span>
+<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.958755899" value="Male" id="group_958755899_2" role="radio" class="ss-q-radio" aria-label="Hombre" required="" aria-required="true"></span>
 <span class="ss-choice-label">Hombre</span>
 </label></li> <li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.958755899" value="No binario" id="group_958755899_3" role="radio" class="ss-q-radio" aria-label="No binario" required="" aria-required="true"></span>
+<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.958755899" value="Non-binary/third gender" id="group_958755899_3" role="radio" class="ss-q-radio" aria-label="No binario" required="" aria-required="true"></span>
 <span class="ss-choice-label">No binario</span>
 </label></li> <li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.958755899" value="Preferís no decirlo" id="group_958755899_4" role="radio" class="ss-q-radio" aria-label="Preferís no decirlo" required="" aria-required="true"></span>
+<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.958755899" value="Prefer not to say" id="group_958755899_4" role="radio" class="ss-q-radio" aria-label="Preferís no decirlo" required="" aria-required="true"></span>
 <span class="ss-choice-label">Preferís no decirlo</span>
 </label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.958755899" value="__other_option__" id="group_958755899_5" role="radio" class="ss-q-radio ss-q-other-toggle" required="" aria-required="true"></span>
 <span class="ss-choice-label">Preferís auto-describirte:</span></label>
@@ -170,28 +170,28 @@ addjs: pre-register-form.js
 
 
 <ul class="ss-choices" role="radiogroup" aria-label="Tipo de registro  "><li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1214914657" value="Académico" id="group_1214914657_1" role="radio" class="ss-q-radio" aria-label="Académico" required="" aria-required="true"></span>
+<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1214914657" value="Academic" id="group_1214914657_1" role="radio" class="ss-q-radio" aria-label="Académico" required="" aria-required="true"></span>
 <span class="ss-choice-label">Académico</span>
 </label></li> <li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1214914657" value="Gubernamental" id="group_1214914657_2" role="radio" class="ss-q-radio" aria-label="Gubernamental" required="" aria-required="true"></span>
+<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1214914657" value="Government" id="group_1214914657_2" role="radio" class="ss-q-radio" aria-label="Gubernamental" required="" aria-required="true"></span>
 <span class="ss-choice-label">Gubernamental</span>
 </label></li> <li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1214914657" value="Particular" id="group_1214914657_3" role="radio" class="ss-q-radio" aria-label="Particular" required="" aria-required="true"></span>
+<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1214914657" value="Individual/unaffiliated" id="group_1214914657_3" role="radio" class="ss-q-radio" aria-label="Particular" required="" aria-required="true"></span>
 <span class="ss-choice-label">Particular</span>
 </label></li> <li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1214914657" value="Prensa" id="group_1214914657_4" role="radio" class="ss-q-radio" aria-label="Prensa" required="" aria-required="true"></span>
+<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1214914657" value="Media" id="group_1214914657_4" role="radio" class="ss-q-radio" aria-label="Prensa" required="" aria-required="true"></span>
 <span class="ss-choice-label">Prensa</span>
 </label></li> <li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1214914657" value="Organización Multilateral" id="group_1214914657_5" role="radio" class="ss-q-radio" aria-label="Organización Multilateral" required="" aria-required="true"></span>
+<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1214914657" value="Multilateral Organization" id="group_1214914657_5" role="radio" class="ss-q-radio" aria-label="Organización Multilateral" required="" aria-required="true"></span>
 <span class="ss-choice-label">Organización Multilateral</span>
 </label></li> <li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1214914657" value="ONG" id="group_1214914657_6" role="radio" class="ss-q-radio" aria-label="ONG" required="" aria-required="true"></span>
+<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1214914657" value="NGO" id="group_1214914657_6" role="radio" class="ss-q-radio" aria-label="ONG" required="" aria-required="true"></span>
 <span class="ss-choice-label">ONG</span>
 </label></li> <li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1214914657" value="Sector Privado" id="group_1214914657_7" role="radio" class="ss-q-radio" aria-label="Sector Privado" required="" aria-required="true"></span>
+<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1214914657" value="Private Sector" id="group_1214914657_7" role="radio" class="ss-q-radio" aria-label="Sector Privado" required="" aria-required="true"></span>
 <span class="ss-choice-label">Sector Privado</span>
 </label></li> <li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1214914657" value="Estudiante" id="group_1214914657_8" role="radio" class="ss-q-radio" aria-label="Estudiante" required="" aria-required="true"></span>
+<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1214914657" value="Student" id="group_1214914657_8" role="radio" class="ss-q-radio" aria-label="Estudiante" required="" aria-required="true"></span>
 <span class="ss-choice-label">Estudiante</span>
 </label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1214914657" value="__other_option__" id="group_1214914657_9" role="radio" class="ss-q-radio ss-q-other-toggle" required="" aria-required="true"></span>
 <span class="ss-choice-label">Otro:</span></label>
