Replace yes with sí

--- a/source/pre-register-form_es.html
+++ b/source/pre-register-form_es.html
@@ -208,7 +208,7 @@ addjs: pre-register-form.js
 
 <ul class="ss-choices" role="radiogroup" aria-label="¿Necesitás asistencia al viajero?  "><li class="ss-choice-item">
 <label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.220116927" value="Yes" id="group_220116927_1" role="radio" class="ss-q-radio" aria-label="Yes" required="" aria-required="true"></span>
-<span class="ss-choice-label">Yes</span>
+<span class="ss-choice-label">S&Iacute;</span>
 </label></li> <li class="ss-choice-item">
 <label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.220116927" value="No" id="group_220116927_2" role="radio" class="ss-q-radio" aria-label="No" required="" aria-required="true"></span>
 <span class="ss-choice-label">No</span>
@@ -224,7 +224,7 @@ addjs: pre-register-form.js
 
 <ul class="ss-choices" role="radiogroup" aria-label="¿Tenés asistencia al viajero?  "><li class="ss-choice-item">
 <label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.199227214" value="Yes" id="group_199227214_1" role="radio" class="ss-q-radio" aria-label="Yes" required="" aria-required="true"></span>
-<span class="ss-choice-label">Yes</span>
+<span class="ss-choice-label">S&Iacute;</span>
 </label></li> <li class="ss-choice-item">
 <label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.199227214" value="No" id="group_199227214_2" role="radio" class="ss-q-radio" aria-label="No" required="" aria-required="true"></span>
 <span class="ss-choice-label">No</span>
@@ -240,7 +240,7 @@ addjs: pre-register-form.js
 
 <ul class="ss-choices" role="radiogroup" aria-label="¿Necesitás VISA?  "><li class="ss-choice-item">
 <label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1505294000" value="Yes" id="group_1505294000_1" role="radio" class="ss-q-radio" aria-label="Yes" required="" aria-required="true"></span>
-<span class="ss-choice-label">Yes</span>
+<span class="ss-choice-label">S&Iacute;</span>
 </label></li> <li class="ss-choice-item">
 <label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1505294000" value="No" id="group_1505294000_2" role="radio" class="ss-q-radio" aria-label="No" required="" aria-required="true"></span>
 <span class="ss-choice-label">No</span>
@@ -256,7 +256,7 @@ addjs: pre-register-form.js
 
 <ul class="ss-choices" role="radiogroup" aria-label="¿Tenés una VISA válida para viajar a Argentina?  "><li class="ss-choice-item">
 <label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1606318892" value="Yes" id="group_1606318892_1" role="radio" class="ss-q-radio" aria-label="Yes" required="" aria-required="true"></span>
-<span class="ss-choice-label">Yes</span>
+<span class="ss-choice-label">S&Iacute;</span>
 </label></li> <li class="ss-choice-item">
 <label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1606318892" value="No" id="group_1606318892_2" role="radio" class="ss-q-radio" aria-label="No" required="" aria-required="true"></span>
 <span class="ss-choice-label">No</span>
