--- a/source/pre-register-form_es.html
+++ b/source/pre-register-form_es.html
@@ -10,10 +10,10 @@ addjs: pre-register-form.js
     <h1>Pre-registro</h1>
   </div>
 
-    <!-- <script type="text/javascript">var submitted=false;</script>
-    <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='form-submitted.html';}"></iframe> -->
+    <script type="text/javascript">var submitted=false;</script>
+    <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='form-submitted.html';}"></iframe>
 
-  <!-- Custom Line --><form class="form form--google" action="https://docs.google.com/forms/d/e/1FAIpQLSdtQTqYhfhCbuMeF0lkWw_cKF9lVQXI5Vb8Elie12whlvzDlg/formResponse" method="POST" id="ss-form" target="_self" autocomplete="on" onsubmit="submitted=true"><ol role="list" class="ss-question-list" style="padding-left: 0;">
+  <!-- Custom Line --><form class="form form--google" action="https://docs.google.com/forms/d/e/1FAIpQLSdtQTqYhfhCbuMeF0lkWw_cKF9lVQXI5Vb8Elie12whlvzDlg/formResponse" method="POST" id="ss-form" target="hidden_iframe" autocomplete="on" onsubmit="submitted=true"><ol role="list" class="ss-question-list" style="padding-left: 0;">
 
 
 <!-- Custom Line --><section class="js-hidden">
