--- a/source/call-for-proposals-form.html
+++ b/source/call-for-proposals-form.html
@@ -12,7 +12,7 @@ lang: en
 <script type="text/javascript">var submitted=false;</script>
 <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='form-submitted.html';}"></iframe>
 
-<!-- Custom Line --> <form class="form form--google" action="https://docs.google.com/forms/d/e/1FAIpQLSfN8wnjrKzB28EzJbGWS0asCD7K4Fi8Hg2uemqec1kLoHnJqA/formResponse" method="POST" id="ss-form" target="hidden_iframe" autocomplete="on" onsubmit=""><ol role="list" class="ss-question-list" style="padding-left: 0;">
+<!-- Custom Line --> <form class="form form--google" action="https://docs.google.com/forms/d/e/1FAIpQLSfN8wnjrKzB28EzJbGWS0asCD7K4Fi8Hg2uemqec1kLoHnJqA/formResponse" method="POST" id="ss-form" target="hidden_iframe" autocomplete="on" onsubmit="submitted=true"><ol role="list" class="ss-question-list" style="padding-left: 0;">
 <section class="js-hidden"> <!-- Custom Line -->
     <div class="ss-form-question errorbox-good" role="listitem">
     <div dir="auto" class="ss-item  ss-text"><div class="ss-form-entry">
