fixes teh "other issue in teh spanish CFP form

--- a/source/call-for-proposals-form_es.html
+++ b/source/call-for-proposals-form_es.html
@@ -87,7 +87,7 @@ lang: es
 
 <input type="text" name="entry.1575319190" value="" class="ss-q-short" id="entry_1575319190" dir="auto" aria-label="Organizacion  " title="">
 <div class="error-message" id="1247889689_errorMessage"></div>
-<div class="required-message">Esta pregunta es obligatoria</div>
+<div class="required-message"></div>
 </div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
 <div dir="auto" class="ss-item ss-item-required ss-text"><div class="ss-form-entry">
 <label class="ss-q-item-label" for="entry_1184610319"><div class="ss-q-title">Correo Electronico
@@ -96,7 +96,6 @@ lang: es
 <div class="ss-q-help ss-secondary-text" dir="auto"></div></label>
 
 <input type="email" name="entry.1184610319" value="" class="ss-q-short" id="entry_1184610319" dir="auto" aria-label="Correo Electronico  Please enter a valid email" aria-required="true" required="" title="Please enter a valid email">
-<div class="error-message" id="2023801737_errorMessage">Please enter a valid email</div>
 <div class="required-message">Esta pregunta es obligatoria</div>
 </div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
 <div dir="auto" class="ss-item ss-item-required ss-text"><div class="ss-form-entry">
@@ -137,7 +136,7 @@ lang: es
 <span class="ss-choice-label">America Latina y Caribe</span>
 </label></li> <li class="ss-choice-item">
 <label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.466055162" value="Middle East &amp; North Africa" id="group_466055162_4" role="radio" class="ss-q-radio" aria-label="Medio Oriente y Africa del Norte" required="" aria-required="true"></span>
-<span class="ss-choice-label">Medio Oriente y Africa del Norte</span>
+<span class="ss-choice-label" style="letter-spacing: -.3px;">Medio Oriente y Africa del Norte</span>
 </label></li> <li class="ss-choice-item">
 <label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.466055162" value="North America" id="group_466055162_5" role="radio" class="ss-q-radio" aria-label="America del Norte" required="" aria-required="true"></span>
 <span class="ss-choice-label">America del Norte</span>
@@ -170,8 +169,8 @@ lang: es
 <label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.958755899" value="Prefer not to say" id="group_958755899_4" role="radio" class="ss-q-radio" aria-label="Preferis no decirlo" required="" aria-required="true"></span>
 <span class="ss-choice-label">Preferis no decirlo</span>
 </label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.958755899" value="__other_option__" id="group_958755899_5" role="radio" class="ss-q-radio ss-q-other-toggle" required="" aria-required="true"></span>
-<span class="ss-choice-label">Preferis auto-describirte:</span></label>
-<span class="ss-q-other-container goog-inline-block"><input type="text" name="entry.958755899.other_option_response" value="" class="ss-q-other" id="entry_958755899_other_option_response" dir="auto" aria-label="Preferis auto-describirte"></span>
+<span class="ss-choice-label">&nbsp;</span></label>
+<span class="ss-q-other-container goog-inline-block"><input type="text" placeholder="Preferis auto-describirte:" name="entry.958755899.other_option_response" value="" class="ss-q-other" id="entry_958755899_other_option_response" dir="auto" aria-label="Preferis auto-describirte"></span>
 </li></ul>
 <div class="error-message" id="1010461108_errorMessage"></div>
 <div class="required-message">Esta pregunta es obligatoria</div></div></div></div>
@@ -253,7 +252,7 @@ lang: es
 
     <ul class="ss-choices" role="radiogroup" aria-label="Areas de impacto  "><li class="ss-choice-item">
     <label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.419959100" value="Accountability and Anti-Corruption (parliamentary, elections, party financing)" id="group_419959100_1" role="radio" class="ss-q-radio" aria-label="Responsabilidad y Anticorrupción (parlamentarios, elecciones, financiación del partido)"></span>
-    <span class="ss-choice-label">Responsabilidad y Anticorrupción (parlamentarios, elecciones, financiación del partido)</span>
+    <span class="ss-choice-label" style="letter-spacing: -1.3px;">Responsabilidad y Anticorrupción (parlamentarios, elecciones, financiación del partido)</span>
     </label></li> <li class="ss-choice-item">
     <label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.419959100" value="Agriculture" id="group_419959100_2" role="radio" class="ss-q-radio" aria-label="Agricultura"></span>
     <span class="ss-choice-label">Agricultura</span>
@@ -307,7 +306,7 @@ lang: es
     <span class="ss-choice-label">Transporte</span>
     </label></li> <li class="ss-choice-item">
     <label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.419959100" value="Urban Development (open cities, resilience, urban planning)." id="group_419959100_19" role="radio" class="ss-q-radio" aria-label="Desarrollo urbano (ciudades abiertas, resiliencia, planificación urbana)."></span>
-    <span class="ss-choice-label">Desarrollo urbano (ciudades abiertas, resiliencia, planificación urbana).</span>
+    <span class="ss-choice-label">Desarrollo urbano (ciudades abiertas, resiliencia, planificación urbana)</span>
     </label></li></ul>
     <div class="error-message" id="728809761_errorMessage"></div>
     <div class="required-message">Esta pregunta es obligatoria</div></div></div></div>
@@ -319,7 +318,7 @@ lang: es
 <label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
 <span class="ss-required-asterisk" aria-hidden="true">*</span></div>
 <!-- Custom Line -->
-<div class="ss-q-help ss-secondary-text" dir="auto">Una oración que describa el propósito y los resultados previstos de la sesión propuesta</div>
+<div class="ss-q-help ss-secondary-text" dir="auto"><small>Una oración que describa el propósito y los resultados previstos de la sesión propuesta</small></div>
 <!-- Custom Line -->
 </label>
 
@@ -363,8 +362,8 @@ lang: es
     <label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.54870812" value="Poster Presentation" id="group_54870812_5" role="radio" class="ss-q-radio" aria-label="Presentacion Poster" required="" aria-required="true"></span>
     <span class="ss-choice-label">Presentacion Poster</span>
     </label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.54870812" value="__other_option__" id="group_54870812_6" role="radio" class="ss-q-radio ss-q-other-toggle" required="" aria-required="true"></span>
-    <span class="ss-choice-label">Otro/Alternativa:</span></label>
-    <span class="ss-q-other-container goog-inline-block"><input type="text" name="entry.54870812.other_option_response" value="" class="ss-q-other" id="entry_54870812_other_option_response" dir="auto" aria-label="Otro/Alternativa"></span>
+    <span class="ss-choice-label">&nbsp;</span></label>
+    <span class="ss-q-other-container goog-inline-block"><input type="text" name="entry.54870812.other_option_response" placeholder="Otro/Alternativa:" value="" class="ss-q-other" id="entry_54870812_other_option_response" dir="auto" aria-label="Otro/Alternativa"></span>
     </li></ul>
     <div class="error-message" id="1622497233_errorMessage"></div>
     <div class="required-message">Esta pregunta es obligatoria</div></div></div></div>
@@ -375,7 +374,7 @@ lang: es
 <label class="ss-q-item-label" for="entry_238007859"><div class="ss-q-title">Formato: Información Adicional
 </div>
 <!-- Custom Line -->
-<div class="ss-q-help ss-secondary-text" dir="auto">Detalles adicionales sobre el formato y el enfoque para la moderación de la sesión</div></label>
+<div class="ss-q-help ss-secondary-text" dir="auto"><small>Detalles adicionales sobre el formato y el enfoque para la moderación de la sesión</small></div></label>
 <!-- Custom Line -->
 </label>
 
@@ -409,13 +408,13 @@ lang: es
 <label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.2014351691" value="Pens" id="group_2014351691_6" role="radio" class="ss-q-radio" aria-label="Lapiceras" required="" aria-required="true"></span>
 <span class="ss-choice-label">Lapiceras</span>
 </label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.2014351691" value="__other_option__" id="group_2014351691_7" role="radio" class="ss-q-radio ss-q-other-toggle" required="" aria-required="true"></span>
-<span class="ss-choice-label">Otras Necesidades:</span></label>
-<span class="ss-q-other-container goog-inline-block"><input type="text" name="entry.2014351691.other_option_response" value="" class="ss-q-other" id="entry_2014351691_other_option_response" dir="auto" aria-label="Otras Necesidades"></span>
+<span class="ss-choice-label">&nbsp;</span></label>
+<span class="ss-q-other-container goog-inline-block"><input type="text" name="entry.2014351691.other_option_response" placeholder="Otras Necesidades:" value="" class="ss-q-other" id="entry_2014351691_other_option_response" dir="auto" aria-label="Otras Necesidades"></span>
 </li></ul>
 <div class="error-message" id="2059408904_errorMessage"></div>
 <div class="required-message">Esta pregunta es obligatoria</div></div></div></div>
 
-<div>
+<div class="participants">
   <table>
     <thead>
       <tr>
@@ -435,21 +434,19 @@ lang: es
             title="">
         </td>
         <td>
-          <select name="__entry_gender__" aria-label="Género  ">
+          <div class="select"><select name="__entry_gender__" aria-label="Género  ">
             <option value=""></option>
             <option value="Female">Mujer</option>
             <option value="Male">Hombre</option>
             <option value="Other">Otra</option>
-          </select>
+          </select></div>
         </td>
       </tr>
 
     </tbody>
   </table>
 
-  <button id="participants-add" type="button">
-    + Añada participante
-  </button>
+  <button id="participants-add" type="button"><i class="material-icons">add</i></button>
 </div>
 
 <input type="hidden" name="draftResponse" value="[null,null,&quot;3592625814328440761&quot;]
@@ -461,7 +458,7 @@ lang: es
 <input type="hidden" name="fbzx" value="3592625814328440761">
 
 <div class="ss-item ss-navigate"><table id="navigation-table"><tbody><tr><td class="ss-form-entry goog-inline-block" id="navigation-buttons" dir="ltr">
-<input type="submit" name="submit" value="Submit" id="ss-submit" class="jfk-button jfk-button-action ">
+<input type="submit" name="submit" value="Enviar" id="ss-submit" class="jfk-button jfk-button-action ">
 </tr></tbody></table></div></ol></form>
 
 </main>
