--- a/source/call-for-proposals-form.html
+++ b/source/call-for-proposals-form.html
@@ -168,8 +168,8 @@ lang: en
 <label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.958755899" value="Prefer not to say" id="group_958755899_4" role="radio" class="ss-q-radio" aria-label="Prefer not to say" required="" aria-required="true"></span>
 <span class="ss-choice-label">Prefer not to say</span>
 </label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.958755899" value="__other_option__" id="group_958755899_5" role="radio" class="ss-q-radio ss-q-other-toggle" required="" aria-required="true"></span>
-<span class="ss-choice-label">Other:</span></label>
-<span class="ss-q-other-container goog-inline-block"><input type="text" name="entry.958755899.other_option_response" value="" class="ss-q-other" id="entry_958755899_other_option_response" dir="auto" aria-label="Other"></span>
+<span class="ss-choice-label">&nbsp;</span></label>
+<span class="ss-q-other-container goog-inline-block"><input placeholder="Other:" type="text" name="entry.958755899.other_option_response" value="" class="ss-q-other" id="entry_958755899_other_option_response" dir="auto" aria-label="Other"></span>
 </li></ul>
 <div class="error-message" id="1010461108_errorMessage"></div>
 <div class="required-message">This is a required question</div></div></div></div>
@@ -361,8 +361,8 @@ lang: en
     <label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.54870812" value="Poster Presentation" id="group_54870812_5" role="radio" class="ss-q-radio" aria-label="Poster Presentation" required="" aria-required="true"></span>
     <span class="ss-choice-label">Poster Presentation</span>
     </label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.54870812" value="__other_option__" id="group_54870812_6" role="radio" class="ss-q-radio ss-q-other-toggle" required="" aria-required="true"></span>
-    <span class="ss-choice-label">Other:</span></label>
-    <span class="ss-q-other-container goog-inline-block"><input type="text" name="entry.54870812.other_option_response" value="" class="ss-q-other" id="entry_54870812_other_option_response" dir="auto" aria-label="Other"></span>
+    <span class="ss-choice-label">&nbsp;</span></label>
+    <span class="ss-q-other-container goog-inline-block"><input placeholder="Other:" type="text" name="entry.54870812.other_option_response" value="" class="ss-q-other" id="entry_54870812_other_option_response" dir="auto" aria-label="Other"></span>
     </li></ul>
     <div class="error-message" id="1622497233_errorMessage"></div>
     <div class="required-message">This is a required question</div></div></div></div>
@@ -407,8 +407,8 @@ lang: en
 <label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.2014351691" value="Pens" id="group_2014351691_6" role="radio" class="ss-q-radio" aria-label="Pens" required="" aria-required="true"></span>
 <span class="ss-choice-label">Pens</span>
 </label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.2014351691" value="__other_option__" id="group_2014351691_7" role="radio" class="ss-q-radio ss-q-other-toggle" required="" aria-required="true"></span>
-<span class="ss-choice-label">Other:</span></label>
-<span class="ss-q-other-container goog-inline-block"><input type="text" name="entry.2014351691.other_option_response" value="" class="ss-q-other" id="entry_2014351691_other_option_response" dir="auto" aria-label="Other"></span>
+<span class="ss-choice-label">&nbsp;</span></label>
+<span class="ss-q-other-container goog-inline-block"><input placeholder="Other:" type="text" name="entry.2014351691.other_option_response" value="" class="ss-q-other" id="entry_2014351691_other_option_response" dir="auto" aria-label="Other"></span>
 </li></ul>
 <div class="error-message" id="2059408904_errorMessage"></div>
 <div class="required-message">This is a required question</div></div></div></div>
